--- a/src/main/resources/templates/displayEscuelas.html
+++ b/src/main/resources/templates/displayEscuelas.html
@@ -122,31 +122,34 @@
     </style>
 </head>
 <body>
+
 <div class="main-block">
     <div class="left-part">
         <i class="fas fa-graduation-cap"></i>
-        <h1>Administrar Centro Escolar</h1>
+        <h1>Administrar Materias</h1>
 
     </div>
     <table class="table table-striped table-dark">
         <thead>
         <th scope="col">Accion</th>
         <th scope="col">Codigo</th>
-        <th scope="col">Nombre materia</th>
+        <th scope="col">Nombre escuela</th>
         <th scope="col">Descripccion</th>
         <th scope="col">Estado</th>
+        <th scope="col">Municipio</th>
         </thead>
-        <th:block th:each="materia, row:${materias}">
+        <th:block th:each="escuela, row:${escuelas}">
             <tr>
                 <th scope="row">
-                        <a class="btn btn-primary" th:href="@{/admin/editMaterias/id/}+${{materia.idMateria}}">
-                            <i>Editar</i>
+                        <a class="btn btn-primary" th:href="@{/admin/editEscuela/id/}+${{escuela.idEscuela}}">
+                            <i class="fas fa-pencil-alt"></i>
                         </a>
                 </th>
-                <th th:text="${materia.idMateria}"/>
-                <th th:text="${materia.materia}"/>
-                <th th:text="${materia.descripcion}"/>
-                <th th:text="${materia.estado} ? 'Activa' : 'No activa'"/>
+                <th th:text="${escuela.idEscuela}"/>
+                <th th:text="${escuela.nombre}"/>
+                <th th:text="${escuela.descripcion}"/>
+                <th th:text="${escuela.estado} ? 'Activa' : 'No activa'"/>
+                <th th:text="${escuela.municipio.nombreMunicipio}"/>
             </tr>
         </th:block>
     </table>
