--- a/src/main/resources/templates/displayMaterias.html
+++ b/src/main/resources/templates/displayMaterias.html
@@ -4,6 +4,7 @@
     <title>Educational registration form</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style>
         html, body {
             min-height: 100%;
@@ -121,30 +122,35 @@
     </style>
 </head>
 <body>
+
 <div class="main-block">
     <div class="left-part">
         <i class="fas fa-graduation-cap"></i>
-        <h1>Administrar Centro Escolar</h1>
+        <h1>Administrar Materias</h1>
 
     </div>
-    <form th:action="@{/admin/post/editEscuela}" th:object="${escuela}" method="post">
-        <div class="title">
-            <i class="fas fa-pencil-alt"></i>
-            <h2>Centro escolar</h2>
-        </div>
-        <div class="info">
-            <input hidden th:field="*{idEscuela}">
-            <input class="fname" type="text" th:field="*{nombre}" name="name" placeholder="Nombre">
-            <input type="text" name="des" th:field="*{descripcion}"  placeholder="Descripccion">
-            <select th:field="*{municipio.idMunicipio}" >
-                <option th:each="m: ${municipios}" th:value="${m.idMunicipio}" th:text="${m.nombreMunicipio}"></option>
-            </select>
-        </div>
-        <div class="checkbox">
-            <input type="checkbox" th:field="*{estado}" name="checkbox"><span>¿Estado Activo?</span>
-        </div>
-        <button type="submit">Submit</button>
-    </form>
+    <table class="table table-striped table-dark">
+        <thead>
+        <th scope="col">Accion</th>
+        <th scope="col">Codigo</th>
+        <th scope="col">Nombre materia</th>
+        <th scope="col">Descripccion</th>
+        <th scope="col">Estado</th>
+        </thead>
+        <th:block th:each="materia, row:${materias}">
+            <tr>
+                <th scope="row">
+                        <a class="btn btn-primary" th:href="@{/admin/editMaterias/id/}+${{materia.idMateria}}">
+                            <i class="fas fa-pencil-alt"></i>
+                        </a>
+                </th>
+                <th th:text="${materia.idMateria}"/>
+                <th th:text="${materia.materia}"/>
+                <th th:text="${materia.descripcion}"/>
+                <th th:text="${materia.estado} ? 'Activa' : 'No activa'"/>
+            </tr>
+        </th:block>
+    </table>
 </div>
 </body>
 </html>
