--- a/src/main/resources/templates/Coordinador/editExpediente.html
+++ b/src/main/resources/templates/Coordinador/editExpediente.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <style>
         html, body {
             min-height: 100%;
@@ -122,39 +123,42 @@
     </style>
 </head>
 <body>
-
 <div class="main-block">
     <div class="left-part">
         <i class="fas fa-graduation-cap"></i>
-        <h1>Administrar Materias</h1>
+        <h1>Coordinador Expediente</h1>
 
     </div>
-    <table class="table table-striped table-dark">
-        <thead>
-        <th scope="col">Accion</th>
-        <th scope="col">Codigo</th>
-        <th scope="col">Nombre escuela</th>
-        <th scope="col">Descripccion</th>
-        <th scope="col">Estado</th>
-        <th scope="col">Departamento</th>
-        <th scope="col">Municipio</th>
-        </thead>
-        <th:block th:each="escuela, row:${escuelas}">
-            <tr>
-                <th scope="row">
-                        <a class="btn btn-primary" th:href="@{/admin/editEscuela/id/}+${{escuela.idEscuela}}">
-                            <i class="fas fa-pencil-alt"></i>
-                        </a>
-                </th>
-                <th th:text="${escuela.idEscuela}"/>
-                <th th:text="${escuela.nombre}"/>
-                <th th:text="${escuela.descripcion}"/>
-                <th th:text="${escuela.estado} ? 'Activa' : 'No activa'"/>
-                <th th:text="${escuela.municipio.departamento.nombreDepartamento}"/>
-                <th th:text="${escuela.municipio.nombreMunicipio}"/>
-            </tr>
-        </th:block>
-    </table>
+    <form th:action="@{/coordinador/post/editExpediente}" th:object="${expediente}" method="post">
+        <div class="title">
+            <i class="fas fa-pencil-alt"></i>
+            <h2>Centro escolar</h2>
+        </div>
+        <div class="info">
+            <input hidden th:field="*{idExpediente}">
+            <input class="fname" type="text" th:field="*{nombre}" name="name" placeholder="Nombres">
+            <input class="fname" type="text" th:field="*{apellido}" name="apellido" placeholder="Apellidos">
+            <input type="text" name="car" th:field="*{carnetMinoridad}"  placeholder="Carnet de minoridad">
+            <input type="text" name="dir" th:field="*{direccion}"  placeholder="Direccion">
+            <input type="text" name="tf" th:field="*{telfijo}"  placeholder="Telefono fijo">
+            <input type="text" name="tm" th:field="*{telmovil}"  placeholder="Telefono movil">
+            <input type="text" name="np" th:field="*{nombrepadre}"  placeholder="Nombre padre">
+            <input type="text" name="nm" th:field="*{nombremadre}"  placeholder="Nombre madre">
+            <select th:field="*{escuela.idEscuela}" >
+                <option th:each="es: ${escuelas}"  th:value="${es.idEscuela}" th:text="${es.nombre}"></option>
+            </select>
+        </div>
+        <div>
+            <input type="date" id="fnacimiento" class="form-control" th:field="*{fechaNac}" >
+        </div>
+        <button type="submit">Submit</button>
+        <a th:if="${flag}" class="btn btn-info" th:href="@{/coordinador/editExpediente}">
+            Limpiar
+        </a>
+        <a class="btn btn-danger" th:href="@{/coordinador/inicio}">
+            Regresar
+        </a>
+    </form>
 </div>
 </body>
 </html>
