--- a/src/main/resources/templates/Coordinador/BuscarExpediente.html
+++ b/src/main/resources/templates/Coordinador/BuscarExpediente.html
@@ -124,37 +124,23 @@
 <body>
 
 <div class="main-block">
-    <div class="left-part">
+    <div >
         <i class="fas fa-graduation-cap"></i>
-        <h1>Administrar Materias</h1>
-
+        <h1>Expedientes de alumnos - Pantalla inicial</h1>
+        <form method="post" th:action="@{/coordinador/post/filtrarExpedientes}" target="_blank">
+            <div class="form-group">
+                <select class="form-control" name="tipo">
+                    <option value="1">Filtrar por Nombre</option>
+                    <option value="2">Filtrar por apellido</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <input class="form-control py-4" id="valor" type="text"
+                       style="width: 400px" name="valor" />
+            </div>
+            <input type="submit" class="btn btn-primary" value="Buscar Clientes">
+        </form>
     </div>
-    <table class="table table-striped table-dark">
-        <thead>
-        <th scope="col">Accion</th>
-        <th scope="col">Codigo</th>
-        <th scope="col">Nombre escuela</th>
-        <th scope="col">Descripccion</th>
-        <th scope="col">Estado</th>
-        <th scope="col">Departamento</th>
-        <th scope="col">Municipio</th>
-        </thead>
-        <th:block th:each="escuela, row:${escuelas}">
-            <tr>
-                <th scope="row">
-                        <a class="btn btn-primary" th:href="@{/admin/editEscuela/id/}+${{escuela.idEscuela}}">
-                            <i class="fas fa-pencil-alt"></i>
-                        </a>
-                </th>
-                <th th:text="${escuela.idEscuela}"/>
-                <th th:text="${escuela.nombre}"/>
-                <th th:text="${escuela.descripcion}"/>
-                <th th:text="${escuela.estado} ? 'Activa' : 'No activa'"/>
-                <th th:text="${escuela.municipio.departamento.nombreDepartamento}"/>
-                <th th:text="${escuela.municipio.nombreMunicipio}"/>
-            </tr>
-        </th:block>
-    </table>
 </div>
 </body>
 </html>
