--- a/src/main/resources/templates/Coordinador/displayMateriasCursadas.html
+++ b/src/main/resources/templates/Coordinador/displayMateriasCursadas.html
@@ -132,26 +132,22 @@
     <table class="table table-striped table-dark">
         <thead>
         <th scope="col">Accion</th>
-        <th scope="col">Codigo</th>
-        <th scope="col">Nombre escuela</th>
-        <th scope="col">Descripccion</th>
-        <th scope="col">Estado</th>
-        <th scope="col">Departamento</th>
-        <th scope="col">Municipio</th>
+        <th scope="col">Nombre materia</th>
+        <th scope="col">Año cursada</th>
+        <th scope="col">Ciclo</th>
+        <th scope="col">Nota</th>
+        <th scope="col">Resultado</th>
         </thead>
-        <th:block th:each="escuela, row:${escuelas}">
+        <th:block th:each="materia, row:${materias}">
             <tr>
                 <th scope="row">
-                        <a class="btn btn-primary" th:href="@{/admin/editEscuela/id/}+${{escuela.idEscuela}}">
+                        <a class="btn btn-primary">
                             <i class="fas fa-pencil-alt"></i>
                         </a>
                 </th>
-                <th th:text="${escuela.idEscuela}"/>
-                <th th:text="${escuela.nombre}"/>
-                <th th:text="${escuela.descripcion}"/>
-                <th th:text="${escuela.estado} ? 'Activa' : 'No activa'"/>
-                <th th:text="${escuela.municipio.departamento.nombreDepartamento}"/>
-                <th th:text="${escuela.municipio.nombreMunicipio}"/>
+                <th th:text="${materia.materia}"/>
+                <th th:text="${materia.descripcion}"/>
+                <th th:text="${materia.resultado}>6? 'Aprobada' : 'Reprobada'"/>
             </tr>
         </th:block>
     </table>
