--- a/src/main/resources/templates/displayUsuarios.html
+++ b/src/main/resources/templates/displayUsuarios.html
@@ -137,6 +137,7 @@
         <th scope="col">Nombre</th>
         <th scope="col">Apellido</th>
         <th scope="col">Municipio</th>
+        <th scope="col">Departamento</th>
         <th scope="col">Fecha nacimiento</th>
         <th scope="col">Edad</th>
         <th scope="col">Direccion</th>
@@ -155,6 +156,7 @@
                 <th th:text="${usuario.nombre}"/>
                 <th th:text="${usuario.apellido}"/>
                 <th th:text="${usuario.municipio.nombreMunicipio}"/>
+                <th th:text="${usuario.municipio.departamento.nombreDepartamento}"/>
                 <th th:text="${usuario.fechaBD}"/>
                 <th/>
                 <th th:text="${usuario.direccion}"/>
