Terminada tabla de materias cursadas (Native query feat. Join)

--- a/src/main/resources/templates/Coordinador/displayExpedienteFiltrado.html
+++ b/src/main/resources/templates/Coordinador/displayExpedienteFiltrado.html
@@ -144,7 +144,7 @@
                     <a class="btn btn-primary" th:href="@{/coordinador/editExpediente/id/}+${{expediente.idExpediente}}" >
                         <i class="fa fa-search" aria-hidden="true"></i>
                     </a>
-                    <a class="btn btn-primary">
+                    <a class="btn btn-primary" th:href="@{/coordinador/Materias/id/}+${{expediente.idExpediente}}">
                         <i class="fas fa-pencil-alt"></i>
                     </a>
                 </th>
