--- a/src/main/resources/templates/Coordinador/displayMateriasCursadas.html
+++ b/src/main/resources/templates/Coordinador/displayMateriasCursadas.html
@@ -146,8 +146,10 @@
                         </a>
                 </th>
                 <th th:text="${materia.materia}"/>
-                <th th:text="${materia.descripcion}"/>
-                <th th:text="${materia.resultado}>6? 'Aprobada' : 'Reprobada'"/>
+                <th th:text="${materia.annio}"/>
+                <th th:text="${materia.ciclo}"/>
+                <th th:text="${materia.nota}"/>
+                <th th:text="${materia.nota}>6? 'Aprobada' : 'Reprobada'"/>
             </tr>
         </th:block>
     </table>
