--- a/src/main/resources/templates/Coordinador/nuevaMateriaCursada.html
+++ b/src/main/resources/templates/Coordinador/nuevaMateriaCursada.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <style>
         html, body {
             min-height: 100%;
@@ -122,39 +123,39 @@
     </style>
 </head>
 <body>
-
 <div class="main-block">
     <div class="left-part">
         <i class="fas fa-graduation-cap"></i>
         <h1 th:text="${expediente.nombre}+' '+${expediente.apellido}" />
-        <a class="btn btn-success" th:href="@{/coordinador/nueva/Materia/id/}+${{expediente.idExpediente}}">
-            <p>+ Agregar nueva materia</p>
-        </a>
+
     </div>
-    <table class="table table-striped table-dark">
-        <thead>
-        <th scope="col">Accion</th>
-        <th scope="col">Nombre materia</th>
-        <th scope="col">Año cursada</th>
-        <th scope="col">Ciclo</th>
-        <th scope="col">Nota</th>
-        <th scope="col">Resultado</th>
-        </thead>
-        <th:block th:each="materia, row:${materias}">
-            <tr>
-                <th scope="row">
-                        <a class="btn btn-primary">
-                            <i class="fas fa-pencil-alt"></i>
-                        </a>
-                </th>
-                <th th:text="${materia.materia}"/>
-                <th th:text="${materia.annio}"/>
-                <th th:text="${materia.ciclo}"/>
-                <th th:text="${materia.nota}"/>
-                <th th:text="${materia.nota}>6? 'Aprobada' : 'Reprobada'"/>
-            </tr>
-        </th:block>
-    </table>
+    <form th:action="@{/coordinador/post/nueva/Materia}" th:object="${modelo}" method="post">
+        <div class="title">
+            <i class="fas fa-pencil-alt"></i>
+            <h2>Agregar materia</h2>
+        </div>
+        <input hidden th:field="*{idexpediente}">
+        <div class="info">
+            <select th:field="*{idmateria}" >
+                <option th:each="materia: ${materias}"  th:value="${materia.idMateria}" th:text="${materia.materia}"></option>
+            </select>
+            <select th:field="*{ciclo}" >
+                <option value="01">01</option>
+                <option value="02">02</option>
+                <option value="03">03</option>
+            </select>
+        </div>
+        <div>
+            <input type="number" class="form-control" th:field="*{nota}" th:placeholder="Nota">
+        </div>
+        <div>
+            <input type="text" class="form-control" th:field="*{annio}" th:placeholder="Año" >
+        </div>
+        <button type="submit">Submit</button>
+        <a class="btn btn-danger" th:href="@{/coordinador/inicio}">
+            Regresar
+        </a>
+    </form>
 </div>
 </body>
 </html>
