--- a/src/main/resources/templates/Coordinador/BuscarExpediente.html
+++ b/src/main/resources/templates/Coordinador/BuscarExpediente.html
@@ -140,6 +140,11 @@
             </div>
             <input type="submit" class="btn btn-primary" value="Buscar Clientes">
         </form>
+        <div>
+            <a class="btn btn-success" th:href="@{/coordinador/editExpediente}">
+                <p>+ Agregar Nuevo Expepediente</p>
+            </a>
+        </div>
     </div>
 </div>
 </body>
