Vistas de prueba y login funcionando

--- a/src/main/resources/templates/editMateria.html
+++ b/src/main/resources/templates/editMateria.html
@@ -135,7 +135,7 @@
         <input hidden th:field="*{idMateria}">
         <div class="info">
             <input class="fname" type="text" th:field="*{materia}" name="materia" placeholder="Materia">
-            <input type="text" name="des" th:field="*{descripcion}"  placeholder="Descripccion">
+            <input type="text" name="des" th:field="*{descripcion}"  placeholder="Descripcion">
         </div>
         <div class="checkbox">
             <input type="checkbox" th:field="*{estado}" name="checkbox"><span>¿Estado Activo?</span>
