--- a/src/main/resources/templates/displayLogin.html
+++ b/src/main/resources/templates/displayLogin.html
@@ -5,6 +5,21 @@
 <title>Login</title>
 </head>
 <body>
+<h1>Login</h1>
+<form th:acthion="@{/Login}" th:object="${usuario}" method="post">
+
+	<label>User: </label>
+	<input th:field = "*{nombreUsuario}" type="text" size="40" placeholder="User"><br><br>
+	
+	<label>Password</label>
+	<input th:field="*{contrasennia}" type="password" size="40" placeholder="Password"><br><br>
+	
+	<input type="submit" value="Continuar">
+</form><br><br>
+
+<form th:action="@{/form}">
+	<input type="submit" value="Nueva Cuenta">
+</form>
 
 </body>
 </html>
