--- a/src/main/resources/templates/Autenticacion/Login.html
+++ b/src/main/resources/templates/Autenticacion/Login.html
@@ -38,7 +38,7 @@
             </label>
           </div>
           <button class="btn btn-lg btn-success btn-block" type="submit">Iniciar Sesión</button>
-          <p class="mt-4 text-center">¿No tienes una cuenta? <span><a href="#">Registrate</a></span></p>
+          <p class="mt-4 text-center">¿No tienes una cuenta? <span><a href="/form">Registrate</a></span></p>
           <p class="mt-4 mb-1 text-muted text-center">&copy; Proyecto Capas 2020</p>
         </form>
       </div>
