--- a/src/main/resources/templates/Autenticacion/Registrarse.html
+++ b/src/main/resources/templates/Autenticacion/Registrarse.html
@@ -16,23 +16,23 @@
     <div class="d-flex flex-column justify-content-center align-items-center">
         <div class="card mt-4 mb-4 col-sm-7">
             <div class="card-body">
-                <form>
+                <form th:action="@{/insertUser}" th:object="${usuario}" method="post">
                     <div class="text-center mb-4">
                         <h1 class="h3 mb-4 font-weight-normal">Registrate</h1>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="inputNombre">Nombre</label>
-                            <input type="text" class="form-control" id="inputNombre" placeholder="Nombre">
+                            <input type="text" th:field="*{nombre}" class="form-control" id="inputNombre" placeholder="Nombre">
                         </div>
                         <div class="form-group col-md-6">
                             <label for="inputApellido">Apellido</label>
-                            <input type="text" class="form-control" id="inputApellido" placeholder="Apellido">
+                            <input type="text" th:field="*{apellido}" class="form-control" id="inputApellido" placeholder="Apellido">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="inputFechaNac">Fecha de nacimiento</label>
-                        <input type="date" class="form-control" id="inputFechaNac">
+                        <input type="date" th:field="*{fechaBD}" class="form-control" id="inputFechaNac">
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
@@ -44,30 +44,29 @@
                         </div>
                         <div class="form-group col-md-6">
                             <label for="inputMunicipio">Municipio</label>
-                            <select id="inputMunicipio" class="form-control">
-                                <option selected>Municipio...</option>
-                                <option>...</option>
+                            <select id="inputMunicipio" th:field="*{municipio.idMunicipio}" class="form-control">
+                                <option th:each="m: ${municipios}" th:value="${m.idMunicipio}" th:text="${m.nombreMunicipio}"></option>
                             </select>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="inputDireccion">Direccion</label>
-                        <input type="text" class="form-control" id="inputDireccion" placeholder="1234 Calle Principal St">
+                        <input type="text" th:field="*{direccion}" class="form-control" id="inputDireccion" placeholder="1234 Calle Principal St">
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-4">
                             <label for="inputUsuario">Usuario</label>
-                            <input type="text" class="form-control" id="inputUsuario" placeholder="Usuario">
+                            <input type="text" th:field="*{nombreUsuario}" class="form-control" id="inputUsuario" placeholder="Usuario">
                         </div>
                         <div class="form-group col-md-4">
                             <label for="inputContraseña">Contraseña</label>
-                            <input type="password" class="form-control" id="inputContraseña" placeholder="*********">
+                            <input type="password" th:field="*{contrasennia}" class="form-control" id="inputContraseña" placeholder="*********">
                         </div>
                         <div class="form-group col-md-4">
                             <label for="inputRol">State</label>
                             <select id="inputRol" class="form-control">
-                                <option selected>Rol...</option>
-                                <option>Administrador</option>
+                                
+                                <option selected>Administrador</option>
                                 <option>Coordinador</option>
                             </select>
                         </div>
@@ -76,7 +75,7 @@
                         <div class="col-sm-2">Estado: </div>
                         <div class="col-sm-10">
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="inputEstado">
+                                <input class="form-check-input" th:field="*{estado}" type="checkbox" id="inputEstado">
                                 <label class="form-check-label" for="inputEstado">
                                     Activo
                                 </label>
@@ -84,7 +83,7 @@
                         </div>
                     </div>
                     <button class="btn btn-lg btn-success btn-block mt-4" type="submit">Registrar</button>
-                    <p class="mt-4 text-center">¿Ya tienes cuenta? <span><a href="#">Iniciar Sesión</a></span></p>
+                    <p class="mt-4 text-center">¿Ya tienes cuenta? <span><a href="/Login">Iniciar Sesión</a></span></p>
                     <p class="mt-3 mb-0 text-muted text-center">&copy; Proyecto Capas 2020</p>
                 </form>
             </div>
