Resuelta la vista de materias reprobadas, aprobadas y promedio

--- a/src/main/resources/templates/Coordinador/displayExpedienteFiltrado.html
+++ b/src/main/resources/templates/Coordinador/displayExpedienteFiltrado.html
@@ -150,9 +150,9 @@
                 </th>
                 <th th:text="${expediente.nombre}"/>
                 <th th:text="${expediente.apellido}"/>
-                <th />
-                <th />
-                <th />
+                <th th:text="${expediente.aprobadas}"/>
+                <th th:text="${expediente.reprobadas}"/>
+                <th th:text="${expediente.promedio}"/>
 
             </tr>
         </th:block>
