--- a/src/main/resources/templates/Coordinador/nuevaMateriaCursada.html
+++ b/src/main/resources/templates/Coordinador/nuevaMateriaCursada.html
@@ -146,11 +146,26 @@
             </select>
         </div>
         <div>
-            <input type="number" class="form-control" th:field="*{nota}" th:placeholder="Nota">
+            <input type="number" step="0.1" max="10" min="0" class="form-control" th:field="*{nota}" th:placeholder="Nota" >
         </div>
-        <div>
-            <input type="text" class="form-control" th:field="*{annio}" th:placeholder="Año" >
-        </div>
+        <select th:field="*{annio}" >
+            <option value="2005">2005</option>
+            <option value="2006">2006</option>
+            <option value="2007">2007</option>
+            <option value="2008">2008</option>
+            <option value="2009">2009</option>
+            <option value="2010">2010</option>
+            <option value="2011">2011</option>
+            <option value="2012">2012</option>
+            <option value="2013">2013</option>
+            <option value="2014">2014</option>
+            <option value="2015">2015</option>
+            <option value="2016">2016</option>
+            <option value="2017">2017</option>
+            <option value="2018">2018</option>
+            <option value="2019">2019</option>
+            <option value="2020">2020</option>
+        </select>
         <button type="submit">Submit</button>
         <a class="btn btn-danger" th:href="@{/coordinador/inicio}">
             Regresar
