--- a/src/main/resources/templates/Administrador/displayUsuarios.html
+++ b/src/main/resources/templates/Administrador/displayUsuarios.html
@@ -49,7 +49,7 @@
     </div>
 </nav>
 <div class="d-flex ml-5 mb-2 mt-2">
-    <img src="../../static/img/school128.png" width="100" height="100" class="d-inline-block align-top mr-2" alt="">
+    <img src="../../static/img/users128.png" width="100" height="100" class="d-inline-block align-top mr-2" alt="">
     <h1 class="mt-4 ml-2 mb-4">Administrar Usuarios</h1>
 </div>
 <button type="button" class="btn btn-success ml-5 mb-4 mt-2">
